# FenetreBoucleJeu

./: .p4ignore  CClass.cpp  CClass.h  CCounter.cpp  CCounter.h  CGameEngine.cpp  CGameEngine.h  CMakeLists.txt  CPageAlocator.cpp  CPageAlocator.h  CProperty.h  Example.cpp  Example.h  FenetreBoucleJeu.cpp  FenetreBoucleJeu.kdev4  FenetreBoucleJeu.sln  FenetreBoucleJeu.vcxproj  FenetreBoucleJeu.vcxproj.filters  GObject.cpp  GObject.h  PropertyRegistrar.cpp
.kdev4/: FenetreBoucleJeu.kdev4
Components/: CComponent.cpp  CComponent.h  CComponentRegistry.cpp  CComponentRegistry.h  CHealthComponent.cpp  CHealthComponent.h  CRendererComponent.cpp  CRendererComponent.h  CTransformComponent.cpp  CTransformComponent.h
Entities/: CEntity.cpp  CEntity.h  CEntityRegistry.cpp  CEntityRegistry.h
FenetreBoucleJeu/x64/Debug/: FenetreBoucleJeu.exe.recipe  FenetreBoucleJeu.ilk  vc143.idb
FenetreBoucleJeu/x64/Debug/FenetreBoucleJeu.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FenetreBoucleJeu.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Scenes/: CSceneRegistry.cpp  CSceneRegistry.h  GScene.cpp  GScene.h
SubSystems/: CGameSubsystem.cpp  CGameSubsystem.h  CInputSubsystem.cpp  CInputSubsystem.h  CRendererSubsystem.cpp  CRendererSubsystem.h  ISubsystem.cpp  ISubsystem.h
x64/Debug/: MonMoteur  SDL3.exp  SDL3.lib  imgui.ini
x64/Debug/Scenes/: TP2.cpp  TP2.h  TP2.json
